# SABC-Compliance

./: .env.example  .gitattributes  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bundle  README.md  docker-entrypoint.sh  launch.sh  migrate_to_postgres.py  pyproject.toml  requirements.txt
backend/ansible/files/wazuh-integration/: custom-sabc  custom-sabc.py
backend/ansible/files/wazuh-sca/: sabc_cis_baseline.yml  sabc_sca_escalation.xml
backend/ansible/playbooks/: check_node_health.yml  configure_puppet_core_enc.yml  configure_wazuh_remediation.yml  configure_wazuh_sca.yml  deploy_compliance_module.yml  detect_agents.yml  export_puppet_ca.yml  install_inspec.yml  install_os_patching.yml  install_puppet_agent.yml  install_puppet_master.yml  install_puppet_server_oss.yml  install_wazuh_agent.yml  install_wazuh_agent_deb.yml  install_wazuh_agent_rpm.yml  install_wazuh_manager.yml  install_wazuh_manager_colocated.yml  install_wazuh_manager_docker.yml  provision.yml
backend/ansible/templates/: wazuh-compose.yml.j2
backend/inspec-profiles/sabc-linux-baseline/: README.md  inspec.yml
backend/inspec-profiles/sabc-linux-baseline/controls/: 1_initial_setup.rb  2_services.rb  3_network.rb  4_logging_audit.rb  5_access_auth.rb  6_maintenance.rb  auth.rb  filesystem.rb  kernel.rb  services.rb  ssh.rb
backend/scan-profiles/sabc-linux-baseline/: README.md  inspec.yml
backend/src/: config.py  main.py
backend/src/core/: errors.py  events.py
backend/src/core/domain/: entities.py  (+1 more)
(+124 files in other folders)
