[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bdc-compliance-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "pydantic>=2.7,<2.8",
    "pydantic-settings>=2.2,<2.3",
    "sqlalchemy>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "httpx>=0.27,<0.28",
    "ansible-runner>=2.3,<2.4",
    "python-multipart>=0.0.9,<0.1",
    "passlib[bcrypt]>=1.7,<1.8",
    "python-jose[cryptography]>=3.3,<3.4",
    "python-dotenv>=1.0,<1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
